--- a/Saber/DEBIAN/control
+++ b/Saber/DEBIAN/control
@@ -5,5 +5,5 @@ Architecture: iphoneos-arm
 Description: Line Messages Theme
 Homepage: http://hizinfiz.github.com
 Maintainer: hizinfiz <hizinfiz@gmail.com>
-Author: Jesse Bryan <hizinfiz@gmail.com>
+Author: hizinfiz <hizinfiz@gmail.com>
 Section: Themes
