--- a/Saber/DEBIAN/control
+++ b/Saber/DEBIAN/control
@@ -3,7 +3,7 @@ Name: Saber
 Version: 1.0
 Architecture: iphoneos-arm
 Description: Line Messages Theme
-Depiction: http://github.com/hizinfiz/hizinfiz.github.com/depiction/Saber.html
+Depiction: http://repo.tsunderedev.moe/depiction/Saber.html
 Homepage: http://github.com/hizinfiz
 Maintainer: hizinfiz <hizinfiz@gmail.com>
 Author: hizinfiz <hizinfiz@gmail.com>
